// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostFooter enables tooltip when myvote is false 1`] = `
<div
  className="footer"
>
  <RoundImageRow
    className="people"
    imageUrls={
      Array [
        undefined,
        undefined,
        undefined,
      ]
    }
  />
  <span
    className="caption caption-lt-lg"
    style={
      Object {
        "cursor": "inherit",
      }
    }
  >
    Joe, Sue and 2 others commented
  </span>
  <a
    className="vote-button text-button"
    data-for="postfooter-tt"
    data-tip="Upvote this post so more people see it."
    data-tip-disable={false}
  >
    <Icon
      className="arrowIcon"
      name="ArrowUp"
    />
    3
  </a>
  <ReactTooltip
    clickable={false}
    delayShow={550}
    effect="solid"
    id="postfooter-tt"
    insecure={true}
    resizeHide={true}
    wrapper="div"
  />
</div>
`;

exports[`PostFooter matches the latest snapshot 1`] = `
<div
  className="footer"
>
  <RoundImageRow
    className="people"
    imageUrls={
      Array [
        undefined,
        undefined,
        undefined,
      ]
    }
  />
  <span
    className="caption caption-lt-lg"
    style={
      Object {
        "cursor": "inherit",
      }
    }
  >
    Joe, Sue and 2 others commented
  </span>
  <a
    className="vote-button text-button voted"
    data-for="postfooter-tt"
    data-tip="Upvote this post so more people see it."
    data-tip-disable={true}
  >
    <Icon
      className="arrowIcon"
      name="ArrowUp"
    />
    3
  </a>
  <ReactTooltip
    clickable={false}
    delayShow={550}
    effect="solid"
    id="postfooter-tt"
    insecure={true}
    resizeHide={true}
    wrapper="div"
  />
</div>
`;
